Integrated Denali Features into CoprHD
Added drivers, storage device, and edited UI

--- a/internalLibraries/storagedriver/build.gradle
+++ b/internalLibraries/storagedriver/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     compile library(slf4j),
             library(commons_lang)
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
