--- a/gradle/wrapper/gradle-wrapper-oss.properties
+++ b/gradle/wrapper/gradle-wrapper-oss.properties
@@ -8,4 +8,6 @@ zipStorePath=wrapper/dists
 # depending on whether an EMC or OSS build is executed
 #
 #distributionUrl=http\://services.gradle.org/distributions/gradle-1.11-bin.zip
-distributionUrl=https\://build.coprhd.org/jenkins/userContent/coprhd-build/services.gradle.org/distributions/gradle-1.11-bin.zip
+#distributionUrl=https\://build.coprhd.org/jenkins/userContent/coprhd-build/services.gradle.org/distributions/gradle-1.11-bin.zip
+distributionUrl=https\://git.istuary.com/denali/release/wikis/anaconda-files/gradle-1.11-bin.zip
+
